# MPS-AI-Agent-_nanoClaw

./: .env.production.example  .gitignore  .npmrc  INTEGRATION.md  README.md  alembic.ini  backup.sh  harden.sh  mcp-crm-server.py  mps-start.sh  mps-stop.sh  mps-workflow-integration.md  nanoclaw-crm-wiring.yaml  nanoclaw.yaml  package.json  pnpm-lock.yaml  requirements-crm.txt  start-nanoclaw.sh  start-server.sh  weekly-skill-update.sh
.github/: dependabot.yml
container/: Dockerfile
deploy/: Caddyfile  Dockerfile.server  alertmanager.yml  alerts.yml  compose.yaml  prometheus.yml
docs/: OPERATIONS_RUNBOOK.md  PRODUCTION_ARCHITECTURE.md  RELEASE_GATE.md  SECURITY_AND_GOVERNANCE.md
migrations/: env.py
mps_client/: api_client.py  login_window.py
mps_server/: access_review.py  auth.py  config.py  correlation.py  database.py  export_feedback.py  main.py  requirements.txt  retention.py  verify_audit.py
nanoclaw-tauri-client/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
nanoclaw-tauri-client/src-tauri/: Cargo.toml  tauri.conf.json
nanoclaw-tauri-client/src-tauri/capabilities/: default.json
nanoclaw-tauri-client/src-tauri/src/: main.rs
scripts/: backup-postgres.sh  restore-postgres.sh
tests/: conftest.py  e2e_api_test.sh  test_audit_sink_contract.py  test_auth_hardening.py  test_authorisation.py  test_c1_race.py  test_c2_outbox_txn.py  test_c3_lease.py  test_c4_evals.py  test_c4_worker.py  test_c5_audit_sign.py  test_factual_support.py  test_i1_audit_outbox.py  test_i1_concurrency.py  test_i4_i5.py  test_i6_recall.py  (+10 more)
(+95 files in other folders)
